Fixes text with select input wrapping.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -1096,6 +1096,7 @@ pre {
 
 select {
     .input;
+    white-space: nowrap;
     word-wrap: normal;
 
     &[multiple] {
